[package]
name = "vblock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
libublk = "0.2.1"
log = "0.4.20"
nix = { version = "0.27.1", features = ["ioctl"] }
serde_json = "1.0.108"
