[package]
name = "vblock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
clap = { version = "4.4.11", features = ["derive"] }
io-uring = "0.6.2"
libublk = "0.2.1"
log = "0.4.20"
nix = { version = "0.27.1", features = ["ioctl"] }
serde_json = "1.0.108"
xts-mode = "0.5.1"
